# insiit-backend-rust

./: .gitignore  Cargo.toml  todo.md
src/: auth.rs  helpers.rs  main.rs  utils.rs
src/routes/: admin.rs  annoucements.rs  announcements.rs  bus.rs  buy_sell.rs  events.rs  lost_found.rs  mess.rs  mod.rs  outlets.rs
src/schemas/: admin_schemas.rs  announcements_schemas.rs  bus_schemas.rs  buy_sell_schemas.rs  common_structs.rs  events_schemas.rs  lost_found_schemas.rs  mess_schemas.rs  mod.rs  outlets_schemas.rs
