[package]
name = "insiit-backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["tokio"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["derive", "macros", "time", "postgres", "runtime-tokio"] }
time = { version = "0.3.53", features = ["serde", "macros", "formatting", "parsing"] }
tokio = { version = "1.52.3", features = ["full"] }
